# condition-matcher

./: Cargo.toml  README.md
condition-matcher-derive/: Cargo.toml
condition-matcher-derive/src/: lib.rs
examples/: advanced_filtering.rs  basic_usage.rs  json_complex_matching.rs  parallel_asset_watchers.rs  parallel_cache_watchers.rs
src/: batch.rs  builder.rs  condition.rs  error.rs  lib.rs  matchable.rs  matcher.rs  result.rs  test.rs  traits.rs
src/evaluators/: comparison.rs  field.rs  json.rs  length.rs  mod.rs  path.rs  type_check.rs  value.rs
src/matchers/: json.rs  mod.rs  rule.rs
