[package]
name = "condition-matcher-derive"
version = "0.1.0"
edition = "2024"
description = "Derive macro for condition-matcher"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[features]
default = []
serde = []

